--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "html5-qrcode": "^2.3.7",
+        "quagga": "^0.12.1"
     }
-}
+} 
